--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "httmps://github.com/ArjunShrivastav1/currencyConvert",
+  "homepage": "httmps://ArjunShrivastav1.github.io/currencyConvert",
   "name": "03currencyconverter",
   "private": true,
   "version": "0.0.0",
